# logsense-AI

./: .env.example  .gitignore  LICENSE  README.md  generate_sample_log.py  install.bat  install.ps1  pyproject.toml  requirements.txt
logsense/: __init__.py  ai_analyzer.py  cli.py  config.py  log_parser.py  security.py  storage.py
logsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
